onboarding app changes
onboarding app changes

--- a/my-project-v16/src/app/nav-bar/nav-bar.component.html
+++ b/my-project-v16/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,17 @@
-<p>nav-bar works!</p>
+<mat-toolbar color="primary">
+    <img src="../../assets/ONBOARDING.png" width="50" height="50" style="border-radius: 50%;overflow: hidden;">
+    <mat-nav-list class="list-horizontal">
+      <mat-list-item>
+        <a href="" routerLink="/home" routerLinkActive="active_route">Home</a>
+      </mat-list-item>
+      <mat-list-item>
+        <a href  routerLink="/my-info" routerLinkActive="active_route">My Info</a>
+      </mat-list-item>
+      <mat-list-item>
+        <a href  routerLink="/people" routerLinkActive="active_route">People</a>
+      </mat-list-item>
+      <mat-list-item>
+        <a href  routerLink="/files" routerLinkActive="active_route">Files</a>
+      </mat-list-item>
+    </mat-nav-list>
+</mat-toolbar>
