Authentication service build for user to login with simple login page
Authentication service build for user to login with simple login page

--- a/my-project-v16/src/app/nav-bar/nav-bar.component.html
+++ b/my-project-v16/src/app/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
     <img src="../../assets/ONBOARDING.png" width="50" height="50" style="border-radius: 50%;overflow: hidden;">
     <mat-nav-list class="list-horizontal">
       <mat-list-item>
-        <a href="" routerLink="/home" routerLinkActive="active_route">Home</a>
+        <a href routerLink="/home" routerLinkActive="active_route">Home</a>
       </mat-list-item>
       <mat-list-item>
         <a href  routerLink="/my-info" routerLinkActive="active_route">My Info</a>
