Changes on login Page and People Page
Changes on login Page and People Page

--- a/my-project-v16/src/app/login/login.component.html
+++ b/my-project-v16/src/app/login/login.component.html
@@ -1,16 +1,25 @@
-<!-- login.component.html -->
-<div class="login-container">
-    <h2>Login</h2>
-    <form [formGroup]="loginForm" (ngSubmit)="login()" class="login-form">
-      <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" formControlName="username">
-      </div>
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" formControlName="password">
-      </div>
-      <button type="submit" [disabled]="loginForm.invalid">Login</button>
-    </form>
+
+<div class="container">
+    <div class="login">
+      <div class="content">
+         <img src="../../assets/login-onboarding.png">
+     </div>
+    <div class="loginform">
+      <h1>Login</h1>
+      <form [formGroup]="loginForm" (ngSubmit)="login()" class="login-form">
+        <mat-form-field class="form-group">
+          <!-- <mat-icon aria-hidden="false" aria-label="account">account_circle</mat-icon> -->
+          <input matInput formControlName="username" type="email" placeholder="Enter your email"
+              required />
+         </mat-form-field>
+         <mat-form-field class="form-group">
+          <!-- <mat-icon aria-hidden="false" aria-label="key">vpn_key</mat-icon> -->
+          <input matInput formControlName="password" type="password" placeholder="Enter your password">
+          <!-- <img src='{{ (isPasswordField1 ? "assets/images/eye-strike.svg" :"assets/images/eye.svg") |secureUrl }}'
+              (click)="togglePasswordField1()" alt="Eye"> -->
+        </mat-form-field>
+        <button class="btn"  type="submit" [disabled]="loginForm.invalid">Login</button>
+      </form>
+    </div>
+    </div>
   </div>
-  
