--- a/my-project-v16/src/app/login/login.component.scss
+++ b/my-project-v16/src/app/login/login.component.scss
@@ -1,48 +1,69 @@
-/* login.component.css */
-.login-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-  }
-  
-  .login-form {
-    width: 300px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  label {
-    display: block;
-    font-weight: bold;
-  }
-  
-  input[type="text"],
-  input[type="password"] {
-    width: calc(100% - 20px);
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  
-  button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container {
+  background-color: #55CE97;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.login{
+  width: 1000px;
+  min-height: 500px;
+  overflow: hidden;
+  border-radius: 5px;
+  background: #222;
+  display: flex;
+  box-shadow: 15px 5px 30px rgb(0,0,0,0.3);
+}
+
+.content{
+  flex-basis: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background:  #00b894;
+}
+
+.content img {
+  width: 100%;
+  height: 100%;
+}
+
+.loginform {
+  flex-basis: 50%;
+  background: #0000;
+  font-family: roboto;
+  padding: 25px;
+}
+
+.loginform h1 {
+  text-align: center;
+  margin-top: 25px;
+  font-size: 2.5em;
+  margin-bottom: 50px;
+  color: #fff;
+}
+
+.form-group{
+  width: 100%;
+}
+
+::placeholder {
+  color: white;
+}
+.btn {
+  width: 100%;
+  border: 0;
+  border-radius: 5px;
+  background: #00b894;
+  color: #fff;
+  padding: 12px;
+  font-size: 18px;
+  cursor: pointer;
+}
