--- a/my-project-v16/src/app/nav-bar/nav-bar.component.html
+++ b/my-project-v16/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar style="background:#1b6648">
     <img src="../../assets/ONBOARDING.png" width="50" height="50" style="border-radius: 50%;overflow: hidden;">
     <mat-nav-list class="list-horizontal">
       <mat-list-item>
