implemented verticle bar graph
implemented verticle bar graph

--- a/my-project-v16/src/app/nav-bar/nav-bar.component.html
+++ b/my-project-v16/src/app/nav-bar/nav-bar.component.html
@@ -13,5 +13,8 @@
       <mat-list-item>
         <a href  routerLink="/files" routerLinkActive="active_route">Files</a>
       </mat-list-item>
+      <mat-list-item>
+        <a href  routerLink="/reports" routerLinkActive="active_route">Reports</a>
+      </mat-list-item>
     </mat-nav-list>
 </mat-toolbar>
