--- a/my-project-v16/src/app/home/home.component.scss
+++ b/my-project-v16/src/app/home/home.component.scss
@@ -19,13 +19,13 @@
 }
 
 .content-two {
-  background: #cbc4c430;
+  // background: #cbc4c430;
   padding: 20px;
   display: flex;
 }
 
 .welcome-container {
-  flex: 40%;
+  flex: 30%;
   margin-right: 10px;
 }
 
@@ -37,51 +37,110 @@
 .vacation-grid-container {
   display: grid;
   grid-template-columns: auto auto;
+
   // padding: 10px;
-    .grid-item {
-      background-color: rgba(255, 255, 255, 0.8);
-      padding: 20px;
-      font-size: 20px;
-      text-align: center;
-    }
-    .grid-item:last-child{
-      border-left: 1px solid rgb(202, 191, 191);
-    }
-    p {
-      font-size: 12px;
-    }
+  .grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    // padding: 20px;
+    font-size: 20px;
+    text-align: center;
+  }
+
+  .grid-item:last-child {
+    border-left: 1px solid rgb(202, 191, 191);
+  }
+
+  h5 {
+    margin-bottom: 5px; /* Adjust the margin here */
+  }
+
+  p {
+    font-size: 12px;
+  }
 }
+
+.grid-container3 {
+  display: grid;
+  grid-template-columns: auto;
+  /* One column */
+  grid-template-rows: auto auto;
+  /* Two rows */
+  gap: 10px;
+
+  /* Gap between items */
+  .grid-item {
+    // background-color: #ddd;
+    // padding: 10px;
+    // text-align: center;
+    display: flex;
+    align-items: center;
+  }
+
+  .icon-wrapper {
+    margin-right: 10px;
+    /* Adjust margin as needed */
+  }
+
+  .text-content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .text-content p {
+    margin-bottom: 5px;
+    /* Adjust the margin bottom to reduce the distance between paragraphs */
+  }
+
+  .small-icon {
+    font-size: 30px;
+    width: 30px;
+    height: 30px;
+    color: grey;
+  }
+}
+
+.separator {
+  border-top: 1px solid rgb(202, 191, 191);
+  /* Add a solid black line as a separator */
+}
+
 .req-btn {
   grid-column: span 2;
   width: 100%;
   border: 0;
   border-radius: 5px;
-  background: #00b894;
+  background: #55ce97;;
   color: #fff;
   font-size: 15px;
   height: 40px;
 }
 
 .welcome-info {
-  flex: 60%;
-  display: grid; /* Add grid display */
-  grid-template-columns: 1fr; /* Adjust columns as needed */
-  gap: 10px; /* Adjust gap as needed */
+  flex: 70%;
+  display: grid;
+  /* Add grid display */
+  grid-template-columns: 1fr;
+  /* Adjust columns as needed */
+  gap: 10px;
+  /* Adjust gap as needed */
   align-items: center;
   justify-content: left;
   margin-bottom: 20px;
+
   .headline {
     text-align: center;
   }
+
   .grid-container {
     display: grid;
     grid-template-columns: auto auto;
-    padding: 10px;
+    padding: 18px;
   }
+
   .grid-container2 {
     display: grid;
     grid-template-columns: auto auto auto;
-    padding: 10px;
+    padding: 35px;
   }
 
   .grid-item {
@@ -91,21 +150,23 @@
     text-align: center;
   }
 
-   .grid-item:first-child {
-      border-left: none
-    }
-    
-    .grid-item {
-      border-left: 1px solid rgb(202, 191, 191);
-    }
+  .grid-item:first-child {
+    border-left: none
+  }
 
-    .grid-item p {
-      margin: 5px 0; /* Adjust margin for paragraph elements */
-      word-wrap: break-word;
-    }
-    p {
-      font-size: 12px;
-    }
+  .grid-item {
+    border-left: 1px solid rgb(202, 191, 191);
+  }
+
+  .grid-item p {
+    margin: 5px 0;
+    /* Adjust margin for paragraph elements */
+    word-wrap: break-word;
+  }
+
+  p {
+    font-size: 15px;
+  }
 }
 
 .large-icon {
