--- a/my-project-v16/src/app/files/files.component.html
+++ b/my-project-v16/src/app/files/files.component.html
@@ -7,7 +7,7 @@
         <a [href]="document.url" target="_blank">
           <img src="../../assets/pdf-img.png" alt="PDF Icon" class="pdf-icon" style="width: 200px;height: 250px;">
           <div class="overlay">
-            <button mat-icon-button>
+            <button mat-icon-button (click)="downloadPdf(document.url,document.name )">
               <mat-icon>download</mat-icon>
             </button>
             <!-- <span>Download</span> -->
