UI changes in my-Info
UI changes in my-Info

--- a/my-project-v16/src/app/my-info/my-info.component.html
+++ b/my-project-v16/src/app/my-info/my-info.component.html
@@ -1,1 +1,33 @@
-<p>my-info works!</p>
+<div class="my-info-container">
+    <div class="profile-container">
+        <div class="profile-image">
+          <img
+            src="../../assets/ONBOARDING.png"
+            width="50"
+            height="50"
+            style="border-radius: 50%; overflow: hidden"
+          />
+        </div>
+        <div class="user-role">
+          <h2>Admin</h2>
+          <h4>Software Engineer</h4>
+        </div>
+      </div>
+  <div class="profile-details">
+    <mat-tab-group>
+      <mat-tab label="Personal">
+        <div style="display: flex;padding: 10px;">
+          <mat-card style="background-color: rgb(247, 243, 243); width: 100%"
+            >Personal</mat-card
+          >
+        </div>
+      </mat-tab>
+      <mat-tab label="Training"> Training </mat-tab>
+      <mat-tab label="Documents"> Documents </mat-tab>
+      <mat-tab label="Notes"> Notes</mat-tab>
+      <mat-tab label="Leaves"> Leaves </mat-tab>
+      <mat-tab label="Pay Info">Pay Info </mat-tab>
+      <mat-tab label="Benefits"> Benefits </mat-tab>
+    </mat-tab-group>
+  </div>
+</div>
