Implementation of standalone and personal documentation filling
Implementation of standalone and personal documentation filling

--- a/my-project-v16/src/app/my-info/my-info.component.html
+++ b/my-project-v16/src/app/my-info/my-info.component.html
@@ -15,19 +15,22 @@
       </div>
   <div class="profile-details">
     <mat-tab-group>
-      <mat-tab label="Personal">
+      <mat-tab *ngFor="let tabName of tabs">
+        <ng-template mat-tab-label>
+          {{ tabName }}
+        </ng-template>
         <div style="display: flex;padding: 10px;">
-          <mat-card style="background-color: rgb(247, 243, 243); width: 100%"
-            >Personal</mat-card
-          >
+          <!-- <div style="background-color: grey;
+          margin-right: 20px;"> Left side Info</div> -->
+          <div><app-personal-info *ngIf="tabName === 'Personal'"></app-personal-info></div>
         </div>
       </mat-tab>
-      <mat-tab label="Training"> Training </mat-tab>
+      <!-- <mat-tab label="Training"> Training </mat-tab>
       <mat-tab label="Documents"> Documents </mat-tab>
       <mat-tab label="Notes"> Notes</mat-tab>
       <mat-tab label="Leaves"> Leaves </mat-tab>
       <mat-tab label="Pay Info">Pay Info </mat-tab>
-      <mat-tab label="Benefits"> Benefits </mat-tab>
+      <mat-tab label="Benefits"> Benefits </mat-tab> -->
     </mat-tab-group>
   </div>
 </div>
