user login from userListJson is done here
user login from userListJson is done here

--- a/my-project-v16/src/app/home/home.component.html
+++ b/my-project-v16/src/app/home/home.component.html
@@ -9,7 +9,7 @@
       />
     </div>
     <div class="user-role">
-      <h2>{{ currentUserRole === "admin" ? "Admin" : "Employee" }}</h2>
+      <h2>{{ currentUserRole }}</h2>
       <h4>Software Engineer</h4>
     </div>
   </div>
