--- a/my-project-v16/src/app/my-info/personal-info/personal-info.component.html
+++ b/my-project-v16/src/app/my-info/personal-info/personal-info.component.html
@@ -35,9 +35,7 @@
       <mat-form-field class="form-field" appearance="outline">
         <mat-select placeholder="Country" formControlName="country">
           <!-- Add options for countries here -->
-          <mat-option value="country1">Country 1</mat-option>
-          <mat-option value="country2">Country 2</mat-option>
-          <mat-option value="country3">Country 3</mat-option>
+          <mat-option *ngFor="let country of countryList">{{country.name}}</mat-option>
         </mat-select>
       </mat-form-field>
     </div>
@@ -61,5 +59,5 @@
     </div>
   
     <button type="submit" mat-raised-button color="primary">Submit</button>
-  </form>
+</form>
   
