Documents folder under - My Info is implemented
Documents folder under - My Info is implemented

--- a/my-project-v16/src/app/my-info/my-info.component.html
+++ b/my-project-v16/src/app/my-info/my-info.component.html
@@ -23,6 +23,7 @@
           <!-- <div style="background-color: grey;
           margin-right: 20px;"> Left side Info</div> -->
           <div><app-personal-info *ngIf="tabName === 'Personal'"></app-personal-info></div>
+          <div><app-documents-info *ngIf="tabName === 'Documents'"></app-documents-info></div>
         </div>
       </mat-tab>
     </mat-tab-group>
