--- a/my-project-v16/src/app/my-info/my-info.component.html
+++ b/my-project-v16/src/app/my-info/my-info.component.html
@@ -19,7 +19,7 @@
         <ng-template mat-tab-label>
           {{ tabName }}
         </ng-template>
-        <div style="display: flex;padding: 10px;">
+        <div style="padding: 10px;">
           <!-- <div style="background-color: grey;
           margin-right: 20px;"> Left side Info</div> -->
           <div><app-personal-info *ngIf="tabName === 'Personal'"></app-personal-info></div>
