--- a/my-project-v16/src/app/my-info/documents-info/documents-info.component.scss
+++ b/my-project-v16/src/app/my-info/documents-info/documents-info.component.scss
@@ -1,7 +1,12 @@
 .folder-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center; /* Centers items horizontally */
+  align-items: center;
+  gap: 20px; /* Adjust as needed */
+    // display: flex;
+    // flex-wrap: wrap;
+    // justify-content: space-between;
   }
   
   .folder-card {
