--- a/my-project-v16/src/app/_models/add-employee/add-employee.component.html
+++ b/my-project-v16/src/app/_models/add-employee/add-employee.component.html
@@ -1,1 +1,109 @@
-<p>add-employee works!</p>
+<!-- <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+    <div class="form-row">
+      <mat-form-field class="form-field" appearance="outline">
+        <input matInput placeholder="First Name" formControlName="firstName">
+      </mat-form-field>
+      <mat-form-field class="form-field" appearance="outline">
+        <input matInput placeholder="Middle Name" formControlName="middleName">
+      </mat-form-field>
+      <mat-form-field class="form-field" appearance="outline">
+        <input matInput placeholder="Last Name" formControlName="lastName">
+      </mat-form-field>
+    </div>
+    <div class="form-row">
+      <mat-form-field class="form-field" appearance="outline">
+        <input matInput formControlName="email" placeholder="Email" required email>
+        <mat-error *ngIf="userForm.get('email')?.hasError('email') && userForm.get('email')?.touched">
+          Please enter a valid email address
+        </mat-error>
+      </mat-form-field>
+    </div>
+
+
+    <div class="form-row">
+      <mat-form-field class="form-field" appearance="outline">
+        <input matInput formControlName="contactNumber" placeholder="Contact Number" required>
+      </mat-form-field>
+
+      <mat-form-field class="form-field" appearance="outline">
+        <input matInput [matDatepicker]="picker" formControlName="dob" placeholder="Date of Birth">
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </div>
+    <div class="form-row">
+      <mat-form-field class="form-field" appearance="outline">
+        <input matInput formControlName="jobTitle" placeholder="Job Title" required>
+      </mat-form-field>
+    </div>
+
+
+    <div class="form-row">
+      <mat-form-field class="form-field" appearance="outline">
+        <mat-label>Role</mat-label>
+        <mat-select formControlName="role" required>
+          <mat-option *ngFor="let role of roles" [value]="role">{{ role }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field class="form-field" appearance="outline">
+        <mat-label>Department</mat-label>
+        <mat-select formControlName="department" required>
+          <mat-option *ngFor="let department of departments" [value]="department">{{ department }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  
+    
+  
+    <div class="form-row" appearance="outline">
+      <input type="file" (change)="onFileSelected($event)" accept="image/*">
+    </div>
+  
+    <button mat-raised-button color="primary" type="submit" [disabled]="userForm.invalid">Submit</button>
+  </form> -->
+  
+
+
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-container">
+    <mat-form-field appearance="outline">
+      <input matInput placeholder="First Name" formControlName="firstName">
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <input matInput placeholder="Middle Name" formControlName="middleName">
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <input matInput placeholder="Last Name" formControlName="lastName">
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <input matInput formControlName="email" placeholder="Email" required email>
+      <mat-error *ngIf="userForm.get('email')?.hasError('email') && userForm.get('email')?.touched">
+        Please enter a valid email address
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <input matInput formControlName="contactNumber" placeholder="Contact Number" required>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <input matInput [matDatepicker]="picker" formControlName="dob" placeholder="Date of Birth">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <input matInput formControlName="jobTitle" placeholder="Job Title" required>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Role</mat-label>
+      <mat-select formControlName="role" required>
+        <mat-option *ngFor="let role of roles" [value]="role">{{ role }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Department</mat-label>
+      <mat-select formControlName="department" required>
+        <mat-option *ngFor="let department of departments" [value]="department">{{ department }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <input type="file" (change)="onFileSelected($event)" accept="image/*">
+    <button mat-raised-button color="primary" type="submit" [disabled]="userForm.invalid">Submit</button>
+  </form>
+  
