--- a/my-project-v16/src/app/people/people.component.scss
+++ b/my-project-v16/src/app/people/people.component.scss
@@ -99,3 +99,8 @@
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-flex {
     height: 40px !important
 }
+
+.wrapper {
+    height: 570px;
+    overflow: auto;
+}
