Changes to connect backend
Changes to connect backend

--- a/my-project-v16/src/app/home/home.component.html
+++ b/my-project-v16/src/app/home/home.component.html
@@ -1,4 +1,7 @@
 <div class="content">
+  <h6 *ngFor="let user of userList">
+    {{user.userList}} - {{user.department}}
+  </h6>
   <div class="profile-container">
     <div class="profile-image">
       <img
